--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,20 @@
     {
       "src": "backend/src/server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "backend/src/server.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/backend/src/server.js"
+      "dest": "public/$1"
     }
   ]
 }
