--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "design-agents",
   "version": "1.0.0",
   "description": "An interactive web application for exploring system design patterns used by major tech companies including Meta, Google, Amazon, Netflix, and Uber.",
-  "main": "script.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon backend/src/server.js",
-    "start": "NODE_ENV=production node backend/src/server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "dev-backend": "nodemon backend/src/server.js",
+    "start-backend": "NODE_ENV=production node backend/src/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,16 +22,23 @@
     "url": "https://github.com/wbingli/design-agents/issues"
   },
   "homepage": "https://github.com/wbingli/design-agents#readme",
-  "type": "module",
   "engines": {
     "node": ">=18"
   },
   "dependencies": {
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "nodemon": "^3.1.10",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
