Fix Vercel deployment: Convert to Next.js API routes
- Added Next.js API routes for companies, ml-topics, pdf-files, and pdf-content
- Updated frontend to use local API routes instead of external backend
- Added vercel.json configuration for serverless functions
- All functionality now works in Vercel deployment without external backend

--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,7 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "backend/src/server.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "public/**/*",
-      "use": "@vercel/static"
+  "functions": {
+    "pages/api/**/*.js": {
+      "runtime": "nodejs18.x"
     }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "backend/src/server.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "public/$1"
-    }
-  ]
+  }
 }
