--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "dev-backend": "nodemon backend/src/server.js",
-    "start-backend": "NODE_ENV=production node backend/src/server.js",
-    "auto-start": "node .cursor/auto-startup.js",
-    "auto-mode": "echo 'Auto mode enabled! Servers will start automatically.'"
+    "lint": "next lint"
   },
   "repository": {
     "type": "git",
@@ -30,16 +26,12 @@
   "dependencies": {
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "morgan": "^1.10.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "nodemon": "^3.1.10",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
