--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "framework": "nextjs",
-  "functions": {
-    "pages/api/**/*.js": {
-      "runtime": "nodejs20.x"
-    }
-  }
+  "framework": "nextjs"
 }
