--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.16.2",
     "next": "^14.2.32",
+    "next-auth": "^4.24.11",
+    "prisma": "^6.16.2",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.1.0"
