--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "next": "^14.2.32",
+    "openai": "^4.104.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.1.0"
