--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "next": "^14.2.32",
+    "prisma": "^6.16.2",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.1.0"
